# The-Spatial-Eye

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  2026Improvements.md  Dockerfile  README.md  agent.md  apphosting.yaml  architecture.md  biome.json  biome_error.json  docker-compose.yml  firestore.rules  gemini.md  jest.config.mjs  jest.setup.ts  knip-utf8.txt  knip_results.txt  lefthook.yml  next.config.ts  package-lock.json  package.json  tsconfig.json
.agent/rules/: architecture.md  backend-rules.md  coding-standards.md  hackathon-standards.md
.github/: copilot-instructions.md
.github/workflows/: accessibility.yml  deploy.yml  tests.yml
.trunk/: trunk.yaml
ExampleCode/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
ExampleCode/services/: geminiService.ts
__tests__/: a11y.test.tsx
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
backend/: Dockerfile  firebase_auth.py  frame_diagnostics.py  hello.py  main.py  pyproject.toml  test_adk.py  tools_config.py
components/: modern-background.tsx  premium-particles-background.tsx  providers.tsx
docs/: 2026Improvements.md  SUMMARY.md  aboutproject.md  adk_implementation.md  backend_migration.md  code_review.md  codereview.md  debug-analysis-1007.md  gemini2.md  hackathon.md  hackathonReady.md  hakentchReady.md  issue_qa.md  liveai_ready.md  module_ready.md  storytellerIssue_QA.md  tracking_failure.md
lib/: constants.ts  types.ts
scripts/: check-env.js  list-models.js  list_gemini_models.js  start-unified.js  test_image_gen.js  test_image_gen_v2.js
(+152 files in other folders)
