[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.131.0",
    "google-adk[a2a]>=1.25.1",
    "google-genai>=1.64.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
    "websockets>=15.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
